# minesweeper

./: .clang-tidy  .gitignore  .orthodoxy.yml  CMakeLists.txt  CMakePresets.json  Makefile
.cache/clangd/index/: app.cc.530EDEEE3E6111D0.idx  app.h.58ADF5A7135B0B0B.idx  assets.cc.E2CFC9B515A720C2.idx  assets.h.160579240BCABF51.idx  audio.cc.969BEE1B8A73434A.idx  audio.h.0B4CE818D2A59FEF.idx  config.cc.E916810A915176EA.idx  config.h.335647549612DB1D.idx  config_test.cc.AC9DD5C6760695E0.idx  game.cc.467CCD55F9723E3B.idx  game.h.F16897DEC8D80B97.idx  game_test.cc.A5B0F89DE4142C2B.idx  main.cc.D984F5092942784B.idx  render.cc.82E4915B607DA04B.idx  render.h.1168FCA77EBD36C2.idx  types.h.ABC033C7674A5AA3.idx  ui.cc.A778C650048258FF.idx  ui.h.6BFAAB0E6C231A15.idx
.claude/commands/: ci-rescue.md
.claude/skills/rescuing-ci-failures/: SKILL.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  Formatting.cmake  StaticAnalysis.cmake
docs/: 2026-05-23-minesweeper-port-design.md
include/minesweeper/: app.h  assets.h  audio.h  config.h  game.h  render.h  types.h  ui.h  util.h
src/: .orthodoxy.yml  CMakeLists.txt  main.cc
src/app/: app.cc
src/assets/: assets.cc
src/audio/: audio.cc
src/config/: config.cc
src/game/: game.cc
src/render/: render.cc
src/ui/: ui.cc
src/util/: util.cc
tests/: CMakeLists.txt  config_test.cc  game_test.cc  render_smoke_test.cc
